feat: accordion prototype

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grzegorz Pokorski - impressgroup recruitment task</title>
+    <title>Grzegorz Pokorski - impress recruitment task</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -126,14 +126,110 @@
             <div
               class="grid grid-cols-1 xl:grid-cols-2 gap-24 relative text-white"
             >
-              <div class="flex flex-col py-16">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
-                  quibusdam rerum pariatur cum consectetur? Cupiditate,
-                  doloremque dolores ipsam sed, asperiores doloribus placeat
-                  necessitatibus esse labore, molestias harum dolore maiores
-                  numquam.
-                </p>
+              <div class="flex flex-col py-16 gap-3">
+                <details open class="border-3 border-white rounded-lg">
+                  <summary
+                    class="flex flex-row items-center gap-4 text-orange2 bg-white px-4 py-3 text-lg font-bold list-none rounded-b-md"
+                  >
+                    <span
+                      class="inline-flex bg-orange2 text-white w-5 h-5 justify-center flex-col rounded-full text-center"
+                    >
+                      +
+                    </span>
+                    O co chodzi z Programem Polska Bezgotówkowa?
+                  </summary>
+                  <p class="p-4">
+                    Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                    Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                    projekt sektora usług płatniczych – Związku Banków Polskich,
+                    Ministerstwa Przedsiębiorczości i Technologii, agentów
+                    rozliczeniowych oraz organizacji płatniczych Mastercard i
+                    Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                    bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                    płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu
+                    przez Program Polska Bezgotówkowa, przedsiębiorca może
+                    odebrać do 3 terminali POS bez abonamentu i prowizji, przez
+                    okres 12 miesięcy.
+                  </p>
+                </details>
+                <details class="border-3 border-white rounded-lg">
+                  <summary
+                    class="flex flex-row items-center gap-4 text-orange2 bg-white px-4 py-3 text-lg font-bold list-none rounded-b-md"
+                  >
+                    <span
+                      class="inline-flex bg-orange2 text-white w-5 h-5 justify-center flex-col rounded-full text-center"
+                    >
+                      +
+                    </span>
+                    Kto może odebrać terminal za darmo?
+                  </summary>
+                  <p class="p-4">
+                    Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                    Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                    projekt sektora usług płatniczych – Związku Banków Polskich,
+                    Ministerstwa Przedsiębiorczości i Technologii, agentów
+                    rozliczeniowych oraz organizacji płatniczych Mastercard i
+                    Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                    bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                    płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu
+                    przez Program Polska Bezgotówkowa, przedsiębiorca może
+                    odebrać do 3 terminali POS bez abonamentu i prowizji, przez
+                    okres 12 miesięcy.
+                  </p>
+                </details>
+                <details class="border-3 border-white rounded-lg">
+                  <summary
+                    class="flex flex-row items-center gap-4 text-orange2 bg-white px-4 py-3 text-lg font-bold list-none rounded-b-md"
+                  >
+                    <span
+                      class="inline-flex bg-orange2 text-white w-5 h-5 justify-center flex-col rounded-full text-center"
+                      data-indicator
+                      >+</span
+                    >
+                    Na ile zawierana jest umowa?
+                  </summary>
+                  <p class="p-4">
+                    Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                    Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                    projekt sektora usług płatniczych – Związku Banków Polskich,
+                    Ministerstwa Przedsiębiorczości i Technologii, agentów
+                    rozliczeniowych oraz organizacji płatniczych Mastercard i
+                    Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                    bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                    płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu
+                    przez Program Polska Bezgotówkowa, przedsiębiorca może
+                    odebrać do 3 terminali POS bez abonamentu i prowizji, przez
+                    okres 12 miesięcy.
+                  </p>
+                </details>
+                <details
+                  class="border-3 border-white rounded-lg"
+                  data-accordion
+                >
+                  <summary
+                    class="flex flex-row items-center gap-4 text-orange2 bg-white px-4 py-3 text-lg font-bold list-none rounded-b-md"
+                  >
+                    <span
+                      class="inline-flex bg-orange2 text-white w-5 h-5 justify-center flex-col rounded-full text-center"
+                      data-indicator
+                      >+</span
+                    >
+                    Ile terminali mogę odebrać w Programie?
+                  </summary>
+                  <p class="p-4">
+                    Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                    Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                    projekt sektora usług płatniczych – Związku Banków Polskich,
+                    Ministerstwa Przedsiębiorczości i Technologii, agentów
+                    rozliczeniowych oraz organizacji płatniczych Mastercard i
+                    Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                    bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                    płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu
+                    przez Program Polska Bezgotówkowa, przedsiębiorca może
+                    odebrać do 3 terminali POS bez abonamentu i prowizji, przez
+                    okres 12 miesięcy.
+                  </p>
+                </details>
               </div>
               <picture class="hidden xl:flex relative">
                 <img
