feat: add animation to the accordion

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grzegorz Pokorski - impressgroup recruitment task</title>
+    <title>Grzegorz Pokorski - impress recruitment task</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -124,16 +124,89 @@
         <div class="bg-orange2 faq-bg">
           <div class="max-w-7xl w-full mx-auto px-3 relative z-[2]">
             <div
-              class="grid grid-cols-1 xl:grid-cols-2 gap-24 relative text-white"
+              class="grid grid-cols-1 xl:grid-cols-2 gap-20 relative text-white"
             >
-              <div class="flex flex-col py-16">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
-                  quibusdam rerum pariatur cum consectetur? Cupiditate,
-                  doloremque dolores ipsam sed, asperiores doloribus placeat
-                  necessitatibus esse labore, molestias harum dolore maiores
-                  numquam.
-                </p>
+              <div class="accordion" data-accordion>
+                <details class="accordion__item" open data-accordion-item>
+                  <summary class="accordion__title" data-accordion-item>
+                    O co chodzi z Programem Polska Bezgotówkowa?
+                  </summary>
+                  <div class="accordion__content" data-accordion-content>
+                    <p class="accordion__content-inner">
+                      Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                      Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                      projekt sektora usług płatniczych – Związku Banków
+                      Polskich, Ministerstwa Przedsiębiorczości i Technologii,
+                      agentów rozliczeniowych oraz organizacji płatniczych
+                      Mastercard i Visa. Ideą Programu jest umożliwienie każdemu
+                      przedsiębiorcy bezkoszowego i bezproblemowego wejścia na
+                      rynek akceptacji płatności bezgotówkowych. Dzięki wsparciu
+                      gwarantowanemu przez Program Polska Bezgotówkowa,
+                      przedsiębiorca może odebrać do 3 terminali POS bez
+                      abonamentu i prowizji, przez okres 12 miesięcy.
+                    </p>
+                  </div>
+                </details>
+                <details class="accordion__item" data-accordion-item>
+                  <summary class="accordion__title" data-accordion-title>
+                    Kto może odebrać terminal za darmo?
+                  </summary>
+                  <div class="accordion__content" data-accordion-content>
+                    <p class="accordion__content-inner">
+                      Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                      Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                      projekt sektora usług płatniczych – Związku Banków
+                      Polskich, Ministerstwa Przedsiębiorczości i Technologii,
+                      agentów rozliczeniowych oraz organizacji płatniczych
+                      Mastercard i Visa. Ideą Programu jest umożliwienie każdemu
+                      przedsiębiorcy bezkoszowego i bezproblemowego wejścia na
+                      rynek akceptacji płatności bezgotówkowych. Dzięki wsparciu
+                      gwarantowanemu przez Program Polska Bezgotówkowa,
+                      przedsiębiorca może odebrać do 3 terminali POS bez
+                      abonamentu i prowizji, przez okres 12 miesięcy.
+                    </p>
+                  </div>
+                </details>
+                <details class="accordion__item" data-accordion-item>
+                  <summary class="accordion__title" data-accordion-title>
+                    Na ile zawierana jest umowa?
+                  </summary>
+                  <div class="accordion__content" data-accordion-content>
+                    <p class="accordion__content-inner">
+                      Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                      Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                      projekt sektora usług płatniczych – Związku Banków
+                      Polskich, Ministerstwa Przedsiębiorczości i Technologii,
+                      agentów rozliczeniowych oraz organizacji płatniczych
+                      Mastercard i Visa. Ideą Programu jest umożliwienie każdemu
+                      przedsiębiorcy bezkoszowego i bezproblemowego wejścia na
+                      rynek akceptacji płatności bezgotówkowych. Dzięki wsparciu
+                      gwarantowanemu przez Program Polska Bezgotówkowa,
+                      przedsiębiorca może odebrać do 3 terminali POS bez
+                      abonamentu i prowizji, przez okres 12 miesięcy.
+                    </p>
+                  </div>
+                </details>
+                <details class="accordion__item" data-accordion-item>
+                  <summary class="accordion__title" data-accordion-title>
+                    Ile terminali mogę odebrać w Programie?
+                  </summary>
+                  <div class="accordion__content" data-accordion-content>
+                    <p class="accordion__content-inner">
+                      Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia
+                      Obrotu Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny
+                      projekt sektora usług płatniczych – Związku Banków
+                      Polskich, Ministerstwa Przedsiębiorczości i Technologii,
+                      agentów rozliczeniowych oraz organizacji płatniczych
+                      Mastercard i Visa. Ideą Programu jest umożliwienie każdemu
+                      przedsiębiorcy bezkoszowego i bezproblemowego wejścia na
+                      rynek akceptacji płatności bezgotówkowych. Dzięki wsparciu
+                      gwarantowanemu przez Program Polska Bezgotówkowa,
+                      przedsiębiorca może odebrać do 3 terminali POS bez
+                      abonamentu i prowizji, przez okres 12 miesięcy.
+                    </p>
+                  </div>
+                </details>
               </div>
               <picture class="hidden xl:flex relative">
                 <img
