--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
             class="flex flex-row gap-x-4 items-center text-orange2 bg-transparent border-orange2 border-3 uppercase py-2 rounded-10 divide-orange2/80 divide-x px-4 hover:bg-orange2 hover:text-white focus:text-white hover:divide-white focus:divide-white"
           >
             <span>Pobierz regulamin</span>
-            <img src="/picture_as_pdf.svg" alt="" class="pl-4" />
+            <img
+              src="/picture_as_pdf.svg"
+              alt=""
+              class="pl-4"
+              aria-hidden="true"
+            />
           </a>
         </footer>
       </section>
